# codecrafters-shell-rust

./: Cargo.toml  README.md
src/: command.rs  error_output.rs  main.rs  output.rs  shell.rs
src/builtins/: cat.rs  cd.rs  echo.rs  exit.rs  ls.rs  mod.rs  pwd.rs  type_cmd.rs
